--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <p><em><a target="_blank" href="https://www.linkedin.com/in/ejiro-ojada-60336231/">HSE Business Risk Advisor & Loss Prevention Engineer</a></< /em>
         </p>
         <p>
-        <p>As a highly motivated and skilled professional with extensive experience and training in Operation and Maintenance,</p>
-        <p>I am confident I will make an immediate impact in this position. In my career I have been actively involved in drilling,</p>
-        <p>subsea and production operation (FPSO) activities which have broadened my knowledge and</p>
-        <p>technical know-how of executing operations activities safely while ensuring environmental impact is as low as reasonably practicable.</p>
-        <p>I have been involved in multiple Major Capital Projects where my duty included developing Operations Assurance plans (Project Operations Plans).</p>
+        As a highly motivated and skilled professional with extensive experience and training in Operation and Maintenance,<br>
+        I am confident I will make an immediate impact in this position. In my career I have been actively involved in drilling,<br>
+        subsea and production operation (FPSO) activities which have broadened my knowledge and<br>
+        technical know-how of executing operations activities safely while ensuring environmental impact is as low as reasonably practicable.<br>
+        I have been involved in multiple Major Capital Projects where my duty included developing Operations Assurance plans (Project Operations Plans).<br>
         </p>
       </td>
     </tr>
