--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Ejiro's Personal Site</title>
 </head>
 
-<body>
+<body style="background-color: skyblue;">
   <table cellspacing="20">
     <tr>
       <td><img src="Picture One.jpg" width="200" height="200" alt="Ejiro's Profile Picture"></td>
